fix: unreadable text in night mode (#51788)

--- a/client/src/components/layouts/global.css
+++ b/client/src/components/layouts/global.css
@@ -511,6 +511,10 @@ hr {
   text-align: center;
 }
 
+.challenge-instructions table tbody tr:nth-of-type(odd) {
+  background-color: var(--tertiary-background);
+}
+
 .help-block {
   color: var(--quaternary-color);
 }
